--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-server.port=8009
-#spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:mydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+
+# Values by default
+#spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.schema-locations=schema.sql --> Something like that but this files in resource
+#spring.sql.init.data-locations=data.sql --> Something like that but this files in resource
